--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-﻿################################################################################
+################################################################################
 # Ce fichier .gitignore a été automatiquement créé par Microsoft(R) Visual Studio.
 ################################################################################
 
@@ -9,3 +9,4 @@
 *.user
 .idea/*
 /src/__pycache__/*
+/src/results/all_gene*
